--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -23,3 +23,11 @@
     border-radius: 10px;
     
 }
+
+@media screen and (max-width:720px ) and  (min-width: 420px) {
+    .nav-container a{
+        display: flex;
+        justify-content: space-between;
+        
+    }
+}
